--- a/examples/Makefile
+++ b/examples/Makefile
@@ -8,13 +8,13 @@ CFLAGS = -pipe -Wall -W  -Wextra -Wwrite-strings -Wno-sign-conversion -O3 -g -fP
 
 LIBS  = -L ../lib -licr                               #include libicr library
 LIBS += -L ../tools/obj-1.0/build/lib -lobj           #include libobj library
-LIBS += -L ../tools/Qhull-2011.2/build/lib -lqhull6   #include qhull C library
-LIBS += -L ../tools/Qhull-2011.2/build/lib -lqhullcpp #include qhull C++ library
+LIBS += -L ../tools/Qhull-2011.2/lib -lqhull6         #include qhull C library
+LIBS += -L ../tools/Qhull-2011.2/lib -lqhullcpp       #include qhull C++ library
 
 FN=example
 
 IDIR += -I ../tools/eigen-eigen-3.0.2            #include eigen headers
-IDIR += -I ../tools/Qhull-2011.2/build/include   #include qhull headers
+IDIR += -I ../tools/Qhull-2011.2/src             #include qhull headers
 IDIR += -I ../tools/obj-1.0/build/include        #include libobj headers
 
 E_SDIR = src
