started implementation of the warped-hyperplane paradigm

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,19 +4,22 @@
 #############################################################################
 
 CC = g++ -g -pthread
-CFLAGS = -pipe -Wall -W  -Wextra -Wwrite-strings -Wno-sign-conversion -O3 -g -fPIC -msse2 -std=gnu++0x 
+#CFLAGS = -pipe -Wall -W  -Wextra -Wwrite-strings -Wno-sign-conversion -O3 -g -fPIC -msse2 -std=gnu++0x 
+CFLAGS = -O3 -g -fPIC -std=gnu++0x 
 
-LIBS  = -L ../lib -licr                               #include libicr library
-LIBS += -L ../tools/obj-1.0/build/lib -lobj           #include libobj library
-LIBS += -L ../tools/Qhull-2011.2/lib -lqhullcpp       #include qhull C++ library - LINK ORDER MATTERS!!
-LIBS += -L ../tools/Qhull-2011.2/lib -lqhull6         #include qhull C library
+LIBS  = -L ../lib -licr                                   #include libicr library
+LIBS += -L ../tools/obj-1.0/build/lib -lobj               #include libobj library
+LIBS += -L ../tools/Qhull-2011.2/lib -lqhullcpp -lqhull6  #include qhull libs LINK ORDER MATTERS!!!
+LIBS += -L /home/rkg/Software/casadi/install/lib  -lcasadi_ipopt_interface -lcasadi    
+LIBS += -L /usr/local/lib -ldl -lipopt -llapack -lcoinmumps -lblas -lcoinmetis 
 
 
-FN=example
+FN=nlp_test
 
 IDIR += -I ../tools/eigen-eigen-3.0.2            #include eigen headers
 IDIR += -I ../tools/Qhull-2011.2/src             #include qhull headers
 IDIR += -I ../tools/obj-1.0/build/include        #include libobj headers
+IDIR += -I /home/rkg/Software/casadi
 
 E_SDIR = src
 E_ODIR = obj
@@ -25,7 +28,7 @@ OUT_ODIR = Output
 
 all : ex 
 	-@echo SYSTYPE  = $(SYSTYPE)
-	
+
 ex : $(E_ODIR)/$(FN).o  
 	$(CC)  $< $(IDIR) $(LIBS) -o ex 
 
@@ -36,7 +39,6 @@ clean :
 	-@rm -f $(E_ODIR)/*.o ex*
 	-@clear
 
-	
 out : 
 	-@rm $(OUT_ODIR)/*.dat
 
