--- a/examples/Makefile
+++ b/examples/Makefile
@@ -13,8 +13,8 @@ LIBS += -L ../tools/Qhull-2011.2/lib -lqhullcpp -lqhull6  #include qhull libs LI
 LIBS += -Wl,-rpath,/home/rkg/Data/Programs/gurobi562/linux64/lib -L/home/rkg/Data/Programs/gurobi562/linux64/lib/ -lgurobi_c++ -lgurobi56 
 
 #FN=experiments_ICR_tilt
-FN=experiments_ICR_shift
-#FN=example
+#FN=experiments_ICR_shift
+FN=example
 
 IDIR += -I ../tools/eigen-eigen-3.0.2            #include eigen headers
 IDIR += -I ../tools/Qhull-2011.2/src             #include qhull headers
